intel/bench_214_new/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main/log.txt
bench_214_new/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:39:24: error: brackets are not allowed here; to declare an array, place the brackets after the name
  const float [40][2] x;
              ~~~~~~~~ ^
                       [40][2]
bench_214_new/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:39:23: error: default initialization of an object of const type 'const float [40][2]'
  const float [40][2] x;
                      ^
bench_214_new/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:40:22: error: brackets are not allowed here; to declare an array, place the brackets after the name
  float [3][2][2] phi;
        ~~~~~~~~~~   ^
                     [3][2][2]
3 errors generated.
HLS FPGA Parse FAILED.
